src/core/sipe.c
@@ -60,6 +60,9 @@
 #include <unistd.h>
 
 #include <glib.h>
+#ifdef HAVE_GMIME
+#include <gmime/gmime.h>
+#endif
 
 #include "sipe-common.h"
 
@@ -10164,10 +10167,16 @@ void sipe_core_init(void)
 			bind_textdomain_codeset(PACKAGE_NAME, "UTF-8"));
 	textdomain(PACKAGE_NAME);
 #endif
+#ifdef HAVE_GMIME
+	g_mime_init(0);
+#endif
 }
 
 void sipe_core_destroy(void)
 {
+#ifdef HAVE_GMIME
+	g_mime_shutdown();
+#endif
 	sip_sec_destroy();
 }
 
